--- a/content/css/styles.css
+++ b/content/css/styles.css
@@ -77,10 +77,12 @@
 	  overflow: hidden;
 	  background-color: #333;
 	  font-size: 20px;
+		transition: all 0.6s ;
 	}
 
 	li {
 	  float: left;
+	
 	}
 
 	li a {
@@ -93,6 +95,8 @@
 
 	li a:hover {
 	  background-color: red;
+
+		transform:  scale(1.2) translateY(-10px);
 	}
 
 	.f {
